--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ figcaption {
 /*////////// BACKGROUNDS //////////*/
 
 .shadow{
-  box-shadow: 0 3px;
+  box-shadow: 0 3px 10px #333;
 }
 
 /*/////// MEDIA ////////*/
