Automatically backed up by Learn

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ figcaption {
 
 .border-right{
   border-right:1px dotted #ccc;
-  padding-right: 30px
+  padding-right: 30px;
 }
 
 /*////////// BACKGROUNDS //////////*/
